remove deprecation warnings warning